@@ -46,6 +46,8 @@ import org.apache.tika.metadata.PDF;
 import org.apache.tika.metadata.Property;
 import org.apache.tika.metadata.TikaCoreProperties;
 import org.apache.tika.metadata.XMP;
+import org.apache.tika.metadata.XMPDC;
+import org.apache.tika.metadata.XMPPDF;
 import org.apache.tika.parser.ParseContext;
 import org.apache.tika.parser.pdf.xmpschemas.XMPSchemaIllustrator;
 import org.apache.tika.parser.pdf.xmpschemas.XMPSchemaPDFUA;
@@ -113,20 +115,25 @@ public class PDMetadataExtractor {
         } catch (IOException e) {
             //swallow
         }
-        if (dcSchema != null) {
-            extractMultilingualItems(metadata, TikaCoreProperties.DESCRIPTION, null, dcSchema);
-            extractDublinCoreListItems(metadata, TikaCoreProperties.CONTRIBUTOR, dcSchema);
-            extractDublinCoreListItems(metadata, TikaCoreProperties.CREATOR, dcSchema);
-            extractMultilingualItems(metadata, TikaCoreProperties.TITLE, null, dcSchema);
-            extractDublinCoreListItems(metadata, TikaCoreProperties.TYPE, dcSchema); // finds only the first one?!
-            extractDublinCoreSimpleItem(metadata, TikaCoreProperties.IDENTIFIER, dcSchema);
-            extractDublinCoreListItems(metadata, TikaCoreProperties.LANGUAGE, dcSchema);
-            extractDublinCoreListItems(metadata, TikaCoreProperties.PUBLISHER, dcSchema);
-            extractDublinCoreListItems(metadata, TikaCoreProperties.RELATION, dcSchema);
-            extractDublinCoreSimpleItem(metadata, TikaCoreProperties.SOURCE, dcSchema);
-            extractDublinCoreListItems(metadata, TikaCoreProperties.SUBJECT, dcSchema);
-            extractMultilingualItems(metadata, TikaCoreProperties.RIGHTS, null, dcSchema);
+        if (dcSchema == null) {
+            return;
         }
+        extractDublinCoreSimpleItem(metadata, dcSchema, TikaCoreProperties.IDENTIFIER.getName(), TikaCoreProperties.IDENTIFIER, XMPDC.IDENTIFIER);
+        extractDublinCoreSimpleItem(metadata, dcSchema, TikaCoreProperties.SOURCE.getName(), TikaCoreProperties.SOURCE, XMPDC.SOURCE);
+
+        extractDublinCoreListItems(metadata, dcSchema, TikaCoreProperties.CONTRIBUTOR.getName(), TikaCoreProperties.CONTRIBUTOR, XMPDC.CONTRIBUTOR);
+        extractDublinCoreListItems(metadata, dcSchema, TikaCoreProperties.CREATOR.getName(), TikaCoreProperties.CREATOR, XMPDC.CREATOR);
+        extractDublinCoreListItems(metadata, dcSchema, TikaCoreProperties.LANGUAGE.getName(), TikaCoreProperties.LANGUAGE, XMPDC.LANGUAGE);
+        extractDublinCoreListItems(metadata, dcSchema, TikaCoreProperties.PUBLISHER.getName(), TikaCoreProperties.PUBLISHER, XMPDC.PUBLISHER);
+        extractDublinCoreListItems(metadata, dcSchema, TikaCoreProperties.RELATION.getName(), TikaCoreProperties.RELATION, XMPDC.RELATION);
+        extractDublinCoreListItems(metadata, dcSchema, TikaCoreProperties.SUBJECT.getName(), TikaCoreProperties.SUBJECT, XMPDC.SUBJECT);
+        // finds only the first one?!
+        extractDublinCoreListItems(metadata, dcSchema, TikaCoreProperties.TYPE.getName(), TikaCoreProperties.TYPE, XMPDC.TYPE);
+
+        extractMultilingualItems(metadata, dcSchema, TikaCoreProperties.DESCRIPTION.getName(), TikaCoreProperties.DESCRIPTION, XMPDC.DESCRIPTION);
+        extractMultilingualItems(metadata, dcSchema, TikaCoreProperties.RIGHTS.getName(), TikaCoreProperties.RIGHTS, XMPDC.RIGHTS);
+        extractMultilingualItems(metadata, dcSchema, TikaCoreProperties.TITLE.getName(), TikaCoreProperties.TITLE, XMPDC.TITLE);
+
     }
 
     private static void extractPDFVT(XMPMetadata xmp, Metadata metadata) {
@@ -261,9 +268,9 @@ public class PDMetadataExtractor {
         if (pdf == null) {
             return;
         }
-        setNotNull(PDF.PRODUCER, pdf.getProducer(), metadata);
-        setNotNull(Office.KEYWORDS, pdf.getKeywords(), metadata);
-        setNotNull(PDF.PDF_VERSION, pdf.getPDFVersion(), metadata);
+        setNotNull(pdf.getProducer(), metadata, PDF.PRODUCER, XMPPDF.PRODUCER);
+        setNotNull(pdf.getKeywords(), metadata, Office.KEYWORDS, XMPPDF.KEY_WORDS);
+        setNotNull(pdf.getPDFVersion(), metadata, PDF.PDF_VERSION, XMPPDF.PDF_VERSION);
     }
 
     private static void extractBasic(XMPMetadata xmp, Metadata metadata) {
@@ -280,12 +287,11 @@ public class PDMetadataExtractor {
         if (basic == null) {
             return;
         }
-        //add the elements from the basic schema if they haven't already
-        //been extracted from dublin core
-        setNotNull(XMP.CREATOR_TOOL, basic.getCreatorTool(), metadata);
-        setNotNull(DublinCore.TITLE, basic.getTitle(), metadata);
-        setNotNull(XMP.ABOUT, basic.getAbout(), metadata);
-        setNotNull(XMP.LABEL, basic.getLabel(), metadata);
+        //add the elements from the basic schema
+        setNotNull(basic.getCreatorTool(), metadata, XMP.CREATOR_TOOL);
+        setNotNull(basic.getTitle(), metadata, DublinCore.TITLE, XMP.TITLE);
+        setNotNull(basic.getAbout(), metadata, XMP.ABOUT);
+        setNotNull(basic.getLabel(), metadata, XMP.LABEL);
         try {
             setNotNull(XMP.CREATE_DATE, basic.getCreateDate(), metadata);
         } catch (IOException e) {
@@ -314,7 +320,7 @@ public class PDMetadataExtractor {
                 metadata.add(XMP.ADVISORY, advisory);
             }
         }
-        setNotNull(XMP.NICKNAME, basic.getNickname(), metadata);
+        setNotNull(basic.getNickname(), metadata, XMP.NICKNAME);
         try {
             setNotNull(XMP.RATING, basic.getRating(), metadata);
         } catch (NumberFormatException e) {
@@ -324,9 +330,13 @@ public class PDMetadataExtractor {
         //and figure out how to add that info
     }
 
-    private static void setNotNull(Property property, String value, Metadata metadata) {
-        if (metadata.get(property) == null && value != null && !value.isBlank()) {
-            metadata.set(property, decode(value));
+    private static void setNotNull(String value, Metadata metadata, Property ... properties) {
+        if (value == null || value.isBlank()) {
+            return;
+        }
+        String decoded = decode(value);
+        for (Property property : properties) {
+            metadata.set(property, decoded);
         }
     }
 
@@ -342,8 +352,11 @@ public class PDMetadataExtractor {
         }
     }
 
-    static void addNotNull(Property property, String value, Metadata metadata) {
-        if (! StringUtils.isBlank(value)) {
+    static void addNotNull(String value, Metadata metadata, Property ... properties) {
+        if (StringUtils.isBlank(value)) {
+            return;
+        }
+        for (Property property : properties) {
             metadata.add(property, value);
         }
     }
@@ -375,44 +388,19 @@ public class PDMetadataExtractor {
      * values (see TIKA-1295)
      *
      * @param metadata
-     * @param property
-     * @param pdfBoxBaseline
-     * @param schema
+     * @param schema schema - must be non-null
+     * @param dcName dublin core name for the property to select from the xmp schema
+     * @param properties property names to set to this value
      */
-    private static void extractMultilingualItems(Metadata metadata, Property property,
-                                                 String pdfBoxBaseline, XMPSchema schema) {
-        //if schema is null, just go with pdfBoxBaseline
-        if (schema == null) {
-            if (pdfBoxBaseline != null && pdfBoxBaseline.length() > 0) {
-                addMetadata(metadata, property, pdfBoxBaseline);
-            }
-            return;
-        }
+    private static void extractMultilingualItems(Metadata metadata, XMPSchema schema, String dcName, Property ... properties) {
 
-        for (String lang : schema.getLanguagePropertyLanguages(property.getName())) {
-            String value = schema.getLanguageProperty(property.getName(), lang);
-
-            if (value != null && value.length() > 0) {
-                //if you're going to add it below in the baseline addition, don't add it now
-                if (pdfBoxBaseline != null && value.equals(pdfBoxBaseline)) {
-                    continue;
-                }
-                addMetadata(metadata, property, value);
-                if (!property.isMultiValuePermitted()) {
-                    return;
+        for (Property property : properties) {
+            for (String lang : schema.getLanguagePropertyLanguages(dcName)) {
+                String value = schema.getLanguageProperty(dcName, lang);
+                if (value != null && ! value.isBlank()) {
+                    addMetadata(metadata, property, value);
                 }
             }
-        }
-
-        if (pdfBoxBaseline != null && pdfBoxBaseline.length() > 0) {
-            //if we've already added something above and multivalue is not permitted
-            //return.
-            if (!property.isMultiValuePermitted()) {
-                if (metadata.get(property) != null) {
-                    return;
-                }
-            }
-            addMetadata(metadata, property, pdfBoxBaseline);
         }
     }
 
@@ -426,22 +414,22 @@ public class PDMetadataExtractor {
      * <p/>
      * This relies on the property having a DublinCore compliant getName()
      *
-     * @param property
-     * @param dc
      * @param metadata
+     * @param dc schema - must be non-null
+     * @param dcName -- name of the dc property to read from the dc schema
+     * @param properties -- property to set for this value in the metadata object
      */
-    private static void extractDublinCoreListItems(Metadata metadata, Property property,
-                                                   XMPSchemaDublinCore dc) {
-        //if no dc, add baseline and return
-        if (dc == null) {
-            return;
-        }
-        List<String> items = getXMPBagOrSeqList(dc, property.getName());
+    private static void extractDublinCoreListItems(Metadata metadata,
+                                                   XMPSchemaDublinCore dc, String dcName, Property ... properties) {
+
+        List<String> items = getXMPBagOrSeqList(dc, dcName);
         if (items == null) {
             return;
         }
-        for (String item : items) {
-            addMetadata(metadata, property, item);
+        for (Property property : properties) {
+            for (String item : items) {
+                addMetadata(metadata, property, item);
+            }
         }
     }
 
@@ -450,35 +438,44 @@ public class PDMetadataExtractor {
      * <p/>
      * This relies on the property having a DublinCore compliant getName()
      *
-     * @param property
-     * @param dc
      * @param metadata
+     * @param dc schema - must be non-null
+     * @param dcName -- name of the dc property to read from the dc schema
+     * @param properties -- property to set for this value in the metadata object
      */
-    private static void extractDublinCoreSimpleItem(Metadata metadata, Property property,
-                                                   XMPSchemaDublinCore dc) {
-        if (dc == null) {
-            return;
+    private static void extractDublinCoreSimpleItem(Metadata metadata,
+                                                   XMPSchemaDublinCore dc, String dcName, Property ... properties) {
+
+        String textProperty = dc.getTextProperty(dcName);
+        for (Property property : properties) {
+            addMetadata(metadata, property, textProperty);
         }
-        String textProperty = dc.getTextProperty(property.getName());
-        addMetadata(metadata, property, textProperty);
     }
 
+    /**
+     * Add non-null, non-empty and unique values to the Metadata object. If the property
+     * does not allow multiple values, silently fail to add values after the first.
+     * @param metadata
+     * @param property
+     * @param value
+     */
     static void addMetadata(Metadata metadata, Property property, String value) {
-        if (value != null) {
-            String decoded = decode(value);
-            if (StringUtils.isBlank(decoded)) {
-                return;
-            }
-            if (property.isMultiValuePermitted() || metadata.get(property) == null) {
-                for (String v : metadata.getValues(property)) {
-                    if (v.equals(decoded)) {
-                        return;
-                    }
-                }
-                metadata.add(property, decoded);
-            }
-            //silently skip adding property that already exists if multiple values are not permitted
+        if (value == null || value.isBlank()) {
+            return;
         }
+        String decoded = decode(value);
+        if (StringUtils.isBlank(decoded)) {
+            return;
+        }
+        if (property.isMultiValuePermitted() || metadata.get(property) == null) {
+            for (String v : metadata.getValues(property)) {
+                if (v.equals(decoded)) {
+                    return;
+                }
+            }
+            metadata.add(property, decoded);
+        }
+        //silently skip adding property that already exists if multiple values are not permitted
     }
 
     static void addMetadata(Metadata metadata, String name, String value) {
